manifests/seraphim/prod/kamaji/Namespace-kamaji-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: kamaji-system
