manifests/seraphim/prod/kamaji/Service-kamaji-etcd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kamaji
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kamaji-etcd
    app.kubernetes.io/version: 3.5.17
    helm.sh/chart: kamaji-etcd-0.15.0
  name: kamaji-etcd
  namespace: kamaji-system
spec:
  clusterIP: None
  ports:
    - name: client
      port: 2379
    - name: peer
      port: 2380
  selector:
    app.kubernetes.io/instance: kamaji
    app.kubernetes.io/name: kamaji-etcd
