manifests/seraphim/prod/kamaji/Service-kamaji-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/instance: kamaji
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/version: latest
    helm.sh/chart: kamaji-0.0.0_latest
  name: kamaji-metrics-service
  namespace: kamaji-system
spec:
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/instance: kamaji
    app.kubernetes.io/name: kamaji
