manifests/seraphim/prod/kamaji/ValidatingWebhookConfiguration-kamaji-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kamaji-system/kamaji-serving-cert
  labels:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/instance: validating-webhook-configuration
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/version: latest
    helm.sh/chart: kamaji-0.0.0_latest
  name: kamaji-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kamaji-webhook-service
        namespace: kamaji-system
        path: /telemetry
    failurePolicy: Ignore
    name: telemetry.kamaji.clastix.io
    rules:
      - apiGroups:
          - kamaji.clastix.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - tenantcontrolplanes
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kamaji-webhook-service
        namespace: kamaji-system
        path: /validate-kamaji-clastix-io-v1alpha1-tenantcontrolplane
    failurePolicy: Fail
    name: vtenantcontrolplane.kb.io
    rules:
      - apiGroups:
          - kamaji.clastix.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - tenantcontrolplanes
    sideEffects: None
